testsuite/poke.pkl/attr-diag-3.pk
/* { dg-do compile } */

var a =
  [1,2,3]'eoffset; /* { dg-error "argument" } */
